// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > preprocessCssInJs case 0 1`] = `
{
  ".x": {
    "&-x .c>.b": {
      "apply": [
        [
          "bg-gray-100",
          "text-blue",
        ],
      ],
      "css": {
        "color": "red",
      },
    },
    "apply": [
      [
        "bg-gray-100",
        "text-blue",
      ],
    ],
    "css": {
      "color": "red",
    },
  },
}
`;

exports[`utils > preprocessCssInJs case 1 1`] = `
{
  ".x .x": {
    "apply": [
      [
        "bg-gray-100",
        "text-blue",
      ],
      [
        "bg-gray-200",
        "text-red",
      ],
      [
        "bg-gray-300",
        "text-blue",
      ],
    ],
    "css": {
      "color": "yello",
    },
  },
}
`;

exports[`utils > preprocessCssInJs case 2 1`] = `
{
  ".x .x": {
    "apply": [
      [
        "bg-gray-100",
        "text-blue",
      ],
      [
        "bg-gray-200",
        "text-red",
      ],
      [
        "bg-gray-300",
        "text-blue",
      ],
    ],
    "css": {
      "color": "yello",
    },
  },
}
`;

exports[`utils > preprocessCssInJs case 3 1`] = `
{
  ".x .x": {
    "apply": [
      [
        "bg-gray-100",
        "text-blue",
      ],
      [
        "bg-gray-400",
        "text-yellow",
        "!important",
      ],
      [
        "bg-gray-200",
        "text-red",
      ],
      [
        "bg-gray-300",
        "text-blue",
      ],
    ],
    "css": {
      "color": "yello",
    },
  },
}
`;

exports[`utils > preprocessCssInJs case 4 1`] = `
{
  ".x .x": {
    "apply": [
      [
        "bg-gray-100",
        "text-blue",
      ],
      [
        "bg-gray-400",
        "text-yellow",
        "!important",
      ],
    ],
    "css": {
      "color": "red",
    },
  },
}
`;
